--- a/assets/resources/images/ui.plist
+++ b/assets/resources/images/ui.plist
@@ -34,7 +34,7 @@
                 <key>textureRotated</key>
                 <false/>
             </dict>
-            <key>menu_an.png</key>
+            <key>btn_start.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
@@ -49,7 +49,7 @@
                 <key>textureRotated</key>
                 <true/>
             </dict>
-            <key>menu_ph.png</key>
+            <key>btn_rank.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
@@ -64,7 +64,7 @@
                 <key>textureRotated</key>
                 <true/>
             </dict>
-            <key>menu_top.png</key>
+            <key>game_title.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
